# Ballast

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DEPLOY.md  README.md
app/: .gitignore  index.html  package-lock.json  package.json  vercel.json  vite.config.ts  vitest.config.ts
contracts/: Cargo.toml
contracts/loanbook/: Cargo.toml
contracts/loanbook/src/: lib.rs  test.rs
contracts/loanbook/test_snapshots/test/: cannot_initialize_twice.1.json  disburse_rejects_negative.1.json  disburse_updates_stats_and_event.1.json  distinct_borrowers_are_independent.1.json  events_emitted_per_action.1.json  full_lifecycle_builds_credit_record.1.json  mark_default_accumulates.1.json  mark_default_increments_count.1.json  multiple_disburse_accumulates.1.json  repay_counts_increment_independently.1.json  repay_saturates_outstanding_at_zero.1.json  repay_updates_stats.1.json  set_operator_rotates.1.json
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs  test.rs
contracts/registry/test_snapshots/test/: anchored_predicate_accepts_matching_root.1.json  anchored_predicate_rejects_wrong_root.1.json  cannot_initialize_twice.1.json  deactivated_predicate_rejects_submit.1.json  distinct_subjects_are_independent.1.json  is_valid_expires_past_window.1.json  is_valid_false_for_unknown_subject_or_predicate.1.json  is_valid_respects_caller_max_age.1.json  journal_with_predicate_tail_is_accepted.1.json  nonce_advances_and_overwrites.1.json  passport_against_unpublished_book_is_rejected.1.json  real_guest_passport_journal_records_through_registry.1.json  register_predicate_requires_admin_auth.1.json  rejects_failing_verdict.1.json  rejects_lower_nonce.1.json  rejects_replayed_nonce.1.json  rejects_wrong_domain.1.json  rolling_anchor_invalidates_old_root.1.json  set_predicate_repins_and_keeps_label.1.json  submit_records_a_credential.1.json
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs  test.rs
contracts/vault/test_snapshots/test/: accepts_valid_solvent_attestation.1.json  attestation_only_never_gates_operator.1.json  cannot_initialize_twice.1.json  cannot_withdraw_more_than_custodied.1.json  check_breaker_trips_on_stale_enforced.1.json  deposit_increases_net_custodied_and_reserves.1.json  enforced_allows_operator_up_to_excess_when_fresh.1.json  enforced_blocks_operator_below_floor.1.json  enforced_blocks_operator_when_stale.1.json  enforced_blocks_operator_without_attestation.1.json  enforced_never_blocks_user_withdrawals.1.json  f2_ratio_buffer_forces_insolvent_at_1to1.1.json  f2_ratio_satisfied_with_sufficient_buffer.1.json  history_accumulates_per_attestation.1.json  insolvent_proof_is_recorded_as_not_solvent.1.json  ledger_is_recorded_in_attestation.1.json  max_operator_withdrawable_reflects_floor_and_freshness.1.json  operator_cannot_withdraw_more_than_reserves.1.json  operator_withdrawal_does_not_reduce_net_custodied.1.json  operator_withdrawal_reduces_net_custodied.1.json  rejects_insolvent_proof.1.json  rejects_nonpositive_deposit.1.json  rejects_replayed_attestation.1.json  rejects_reserves_mismatch.1.json  require_fresh_attestation_passes_when_fresh_solvent.1.json  require_fresh_attestation_traps_when_too_old.1.json  set_image_id_updates_pinned_guest.1.json  set_max_staleness_updates_config.1.json  set_mode_flips_enforcement.1.json  set_mode_to_enforced_then_operator_blocked.1.json  solvent_proof_keeps_healthy.1.json  solvent_proof_recovers_from_winddown.1.json  user_cannot_withdraw_more_than_custodied.1.json  user_withdrawal_reduces_net_custodied.1.json  winddown_hard_locks_operator.1.json  winddown_user_withdrawal_is_pro_rata.1.json  withdraw_operator_requires_operator_auth.1.json
docs/: API_APPENDIX.md  FEATURES_ADDENDUM.md  FRONTEND_ATTACK_PLAN.md  MASTER_SPEC.md  PROMPT_2_build_STELLAR_ZK_v3.md
guest/: Cargo.toml
guest/host/: Cargo.toml
guest/host/src/: main.rs
guest/methods/guest/: Cargo.toml
guest/methods/guest/src/: main.rs
guest/tools/: Cargo.toml
guest/tools/src/: main.rs
research/: DEDUP.md  GAPS.md  INDEX.md  RESEARCH_FULL.md
scripts/: PROVE_ON_VM.md  passport_prove_submit.sh  prove_and_post.sh  prove_pool.sh  redeploy_vault.sh  smoke_test.sh  wsl_build_verifier.sh  wsl_check_usdc.sh  wsl_deploy_router2.sh  (+14 more)
(+137 files in other folders)
