[package]
name = "ballast-registry"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Ballast — generic zero-knowledge credential registry for Stellar (verify + record any RISC Zero predicate proof)"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
# Reuse the guest's passport journal packer in tests so the on-chain registry
# parser and the RISC Zero guest can never drift on byte layout.
ballast-core = { path = "../../guest/core" }
