[package]
name = "ballast-vault"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Ballast — solvency-enforcing reserve vault for Stellar stablecoin custodians"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
